# DeepCompartmentModels.jl

./: .gitignore  Manifest.toml  Project.toml  README.md
data/: fviii_simulation.csv  init_old_implementation.bson
ext/: DCMDataFramesExt.jl
src/: DeepCompartmentModels.jl  gpe_ensemble.ipynb  monte_carlo_test.jl  predictive_log_likelihood.ipynb
src/lib/: auto_encoding_node.jl  basic_hybrid_model.jl  callbacks.jl  compartment_models.jl  constrain.jl  dataset.jl  dcm.jl  error.jl  gradients.jl  hybrid_dcm.jl  individuals.jl  initializers.jl  latent_encoder_decoder.jl  low_dim_node.jl  lux.helpers.jl  mixed_effects.jl  model.jl  nn.jl  node.jl  objectives.jl  optimization.jl  population.jl  random_effects.jl  setup.jl  solve.jl  test_dcm.jl  test_nn.jl  test_vi.jl  ude.jl  vem.jl  vi.jl
src/py/: elbo_vs_pll.py  pyproject.toml
test/: Manifest.toml  Project.toml  dcm.test.jl  initializers.test.jl  mixed_effects.test.jl  model.test.jl  population.test.jl  runtests.jl
test/lib/: dcm.test.jl  objectives.test.jl  population.test.jl
tutorial/: fitting_a_dcm.ipynb
tutorial/.ipynb_checkpoints/: fitting_a_dcm-checkpoint.ipynb
tutorial/assets/: graphical_models.fdb_latexmk  graphical_models.fls  graphical_models.tex
tutorial/data/: warfarin.csv
