[tool.poetry]
name = "gpy-implementation"
version = "0.1.0"
description = "checking our implementation against gpytorch"
authors = ["Janssena <alexanderjanssen@live.com>"]
readme = "README.md"
packages = [{include = "gpy_implementation"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.2"
gpytorch = "^1.11"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
